--- a/app/templates/inventario/partial/_factura.html
+++ b/app/templates/inventario/partial/_factura.html
@@ -25,11 +25,11 @@
         <table id="table_factura_detalle" class="table table-bordered tablesaw-swipe table-responsive" >
             <thead>
             <tr>
-                <th>Producto</th>
-                <th>Existencia</th>
-                <th>Cantidad</th>
-                <th>P/U</th>
-                <th>Total</th>
+                <th width="100%">Producto</th>
+                <th width="90px">Existencia</th>
+                <th width="90px">Cantidad</th>
+                <th width="50px">P/U</th>
+                <th width="90px">Total</th>
                 <th></th>
             </tr>
             </thead>
