--- a/app/templates/inventario/partial/_productos.html
+++ b/app/templates/inventario/partial/_productos.html
@@ -15,7 +15,7 @@
         <td >{{ detalle.producto.serie }}</td>
         <td >{{ detalle.bodega.nombre }}</td>
         <td >{{ detalle.cant_disponible }}</td>
-        <td><button class="btn btn-3d btn-success btn-sm" onclick="agregarProductoDetalle('{{ detalle.producto.nombre }}',{{ detalle.id }},{{ detalle.cant_disponible }},{{ detalle.producto.precio }})"><i class="fa fa-plus fa-fw"></i>Agregar</button></td>
+        <td><button class="btn btn-3d btn-success btn-sm" onclick="agregarProductoDetalle('{{ detalle.producto.nombre }}-{{ detalle.producto.serie }}',{{ detalle.id }},{{ detalle.cant_disponible }},{{ detalle.producto.precio }})"><i class="fa fa-plus fa-fw"></i>Agregar</button></td>
     </tr>
     {% endfor %}
     </tbody>
