--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -457,6 +457,17 @@
                                </div>
                              </a>
                          </div>
+                         <div class="col-md-3">
+                             <a href="/app/facturacion/">
+                               <div class="widget-box clearfix">
+                                   <div>
+                                       <h2><i class="fa fa-shopping-cart pull-right p2-color"></i></h2>
+                                       <h4>Inventario y Facturacion</h4>
+                                       <h2></h2>
+                                   </div>
+                               </div>
+                             </a>
+                         </div>
              </div>
                     {% comment %}
                     <div class="row">
