--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -458,7 +458,7 @@
                              </a>
                          </div>
                          <div class="col-md-3">
-                             <a href="/app/facturacion/">
+                             <a href="/app/proformas/">
                                <div class="widget-box clearfix">
                                    <div>
                                        <h2><i class="fa fa-shopping-cart pull-right p2-color"></i></h2>
@@ -469,7 +469,6 @@
                              </a>
                          </div>
              </div>
-                    {% comment %}
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="panel panel-card recent-activites">
@@ -752,7 +751,7 @@
                                 </div>
                             </div><!-- End .panel -->
                         </div>
-                    </div>{% endcomment %}
+                    </div>
                     {% endblock cuerpo %}
                 </div>
             </div>
