--- a/app/templates/inventario/proformas.html
+++ b/app/templates/inventario/proformas.html
@@ -102,7 +102,9 @@
                 nuevoPedido();
             });
         });
-
+        $(document).ajaxStop(function () {
+            $(".select2").select2();
+        });
         function mostrarPedidos() {
             $.ajax({
                 url:"../render_listado_pedido/",
